--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "dependencies": {
     "grunt": "0.4.2",
+    "grunt-autoprefixer": "^3.0.3",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
     "grunt-contrib-concat": "~0.3.0",
@@ -20,6 +21,7 @@
     "include-all": "~0.1.3",
     "jade": "^1.11.0",
     "rc": "~0.5.0",
+    "rupture": "^0.6.1",
     "sails": "~0.11.0",
     "sails-postgresql": "^0.10.16"
   },
