--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "version": "4.0.0",
   "private": true,
   "scripts": {
-    "start": "nuxt-ts",
-    "build": "nuxt-ts generate"
+    "start": "nuxt dev",
+    "build": "nuxt generate"
   },
   "dependencies": {
-    "@nuxt/content": "^1.9.0",
-    "@nuxt/typescript-runtime": "^2.0.0",
+    "@nuxt/content": "^1.11.1",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6"
   },
@@ -19,8 +18,6 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^2.0.2",
-    "@nuxt/types": "^2.14.6",
-    "@nuxt/typescript-build": "^2.0.3",
     "@nuxtjs/tailwindcss": "^3.1.0",
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/typography": "^0.3.1",
