--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.35",
+    "puppeteer": "^5.5.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
   }
 }
