--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,3 +41,20 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
           cname: btkostner.io
+
+  Cloudflare_Purge:
+    name: Cloudflare (Purge)
+    runs-on: ubuntu-latest
+
+    needs:
+      - GitHub_Pages
+
+    steps:
+      - name: Purge
+        run: |
+          curl -X DELETE \
+            https://api.cloudflare.com/client/v4/zones/${{ secrets.CLOUDFLARE_ZONE }}/purge_cache \
+            -H 'Content-Type: application/json' \
+            -H 'Authorization: Bearer ${{ secrets.CLOUDFLARE_KEY }}' \
+            -H 'cache-control: no-cache' \
+            -d '{"purge_everything":true}'
