--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^9.8.6",
+    "defu": "^3.2.2",
     "postcss": "^7.0.35",
     "puppeteer": "^5.5.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
