--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-pro": "^5.15.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/pro-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
+    "@nuxtjs/color-mode": "^2.0.2",
     "@nuxtjs/pwa": "^3.3.4",
     "@nuxtjs/robots": "^2.4.2",
     "@nuxtjs/tailwindcss": "^3.1.0",
@@ -28,6 +29,8 @@
     "autoprefixer": "^9.8.6",
     "nuxt-dynamic-images": "0.0.1",
     "postcss": "^7.0.35",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
+    "shiki": "^0.2.7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "tailwindcss-dark-mode": "^1.1.7"
   }
 }
