--- a/package.json
+++ b/package.json
@@ -8,29 +8,27 @@
     "build": "nuxt generate"
   },
   "dependencies": {
-    "@nuxt/content": "^1.11.1",
+    "@nuxt/content": "^1.14.0",
     "@nuxtjs/feed": "^2.0.0",
     "@nuxtjs/sitemap": "^2.4.0",
-    "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "core-js": "^3.15.2",
+    "nuxt": "^2.15.7",
+    "vue": "^2.6.14"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/pro-solid-svg-icons": "^5.15.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/pro-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^2.0.2",
-    "@nuxtjs/color-mode": "^2.0.2",
-    "@nuxtjs/pwa": "^3.3.4",
-    "@nuxtjs/robots": "^2.4.2",
-    "@nuxtjs/tailwindcss": "^3.1.0",
-    "@tailwindcss/aspect-ratio": "^0.2.0",
-    "@tailwindcss/typography": "^0.3.1",
-    "autoprefixer": "^9.8.6",
+    "@nuxtjs/color-mode": "^2.0.10",
+    "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/robots": "^2.5.0",
+    "@nuxtjs/tailwindcss": "^4.2.0",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@tailwindcss/typography": "^0.4.1",
     "nuxt-dynamic-images": "0.0.1",
-    "postcss": "^7.0.35",
-    "shiki": "^0.2.7",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "shiki": "^0.9.5",
     "tailwindcss-dark-mode": "^1.1.7"
   }
 }
