--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,13 +7,16 @@ on:
     branches:
       - main
 
-env:
-  FONTAWESOME_NPM_AUTH_TOKEN: ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
+concurrency: deploy
 
 jobs:
   GitHub_Pages:
     name: GitHub Pages
     runs-on: ubuntu-latest
+    
+    environment:
+      name: Production
+      url: https://btkostner.io
 
     steps:
       - name: Cancel
@@ -31,6 +34,8 @@ jobs:
 
       - name: Install (Npm)
         run: npm ci
+        env:
+          FONTAWESOME_NPM_AUTH_TOKEN: ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
 
       - name: Build
         run: npm run build
@@ -42,14 +47,6 @@ jobs:
           publish_dir: ./dist
           cname: btkostner.io
 
-  Cloudflare_Purge:
-    name: Cloudflare (Purge)
-    runs-on: ubuntu-latest
-
-    needs:
-      - GitHub_Pages
-
-    steps:
       - name: Purge
         run: |
           curl -X DELETE \
