--- a/.github/workflows/preview-teardown.yml
+++ b/.github/workflows/preview-teardown.yml
@@ -7,6 +7,9 @@ on:
     types:
       - closed
 
+permissions:
+  deployments: write
+
 concurrency:
   group: Preview PR ${{ github.event.number }}
   cancel-in-progress: true
