--- a/.github/workflows/preview-setup.yml
+++ b/.github/workflows/preview-setup.yml
@@ -10,7 +10,16 @@ on:
       - synchronize
 
 permissions:
+  actions: read
+  checks: write
+  contents: write
   deployments: write
+  issues: read
+  packages: read
+  pull-requests: read
+  repository-projects: read
+  security-events: read
+  statuses: write
 
 concurrency:
   group: Preview PR ${{ github.event.number }}
