--- a/.github/workflows/preview-teardown.yml
+++ b/.github/workflows/preview-teardown.yml
@@ -8,7 +8,16 @@ on:
       - closed
 
 permissions:
+  actions: read
+  checks: read
+  contents: write
   deployments: write
+  issues: read
+  packages: read
+  pull-requests: read
+  repository-projects: read
+  security-events: read
+  statuses: read
 
 concurrency:
   group: Preview PR ${{ github.event.number }}
