--- a/.github/workflows/preview-teardown.yml
+++ b/.github/workflows/preview-teardown.yml
@@ -7,18 +7,6 @@ on:
     types:
       - closed
 
-permissions:
-  actions: read
-  checks: read
-  contents: write
-  deployments: write
-  issues: read
-  packages: read
-  pull-requests: read
-  repository-projects: read
-  security-events: read
-  statuses: read
-
 concurrency:
   group: Preview PR ${{ github.event.number }}
   cancel-in-progress: true
@@ -39,7 +27,7 @@ jobs:
       - name: Destroy
         uses: octokit/request-action@v2.x
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_DEPLOY_KEY }}
         with:
           route: DELETE /repos/{owner}/{repo}/environments/{environment_name}
           owner: ${{ github.event.repository.owner.login }}
