update permissions for PR teardown

--- a/.github/workflows/preview-teardown.yml
+++ b/.github/workflows/preview-teardown.yml
@@ -11,6 +11,12 @@ concurrency:
   group: Preview PR ${{ github.event.number }}
   cancel-in-progress: true
 
+permissions:
+  checks: write
+  contents: write
+  deployments: write
+  statuses: write
+
 jobs:
   GitHub_Pages:
     name: GitHub Pages
