--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "start": "nuxt dev",
-    "build": "nuxt generate"
+    "build": "nuxt generate",
+    "lint": "eslint --ext .js,.vue"
   },
   "dependencies": {
     "@nuxt/content": "^1.15.1",
@@ -24,11 +25,17 @@
     "@fortawesome/vue-fontawesome": "^2.0.6",
     "@nuxt/image": "^0.6.0",
     "@nuxtjs/color-mode": "^2.1.1",
+    "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/robots": "^2.5.0",
     "@nuxtjs/tailwindcss": "^4.2.1",
     "@tailwindcss/aspect-ratio": "^0.3.0",
     "@tailwindcss/typography": "^0.4.1",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
     "nuxt-dynamic-images": "0.0.1",
     "shiki": "^0.9.13"
   }
