Setup GitHub environments and preview urls (#10)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,21 @@
 ---
 
-name: Deploy
+name: CI
 
 on:
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
   push:
     branches:
       - main
 
-concurrency:
-  group: Production
-  cancel-in-progress: true
-
 jobs:
-  GitHub_Pages:
-    name: GitHub Pages
+  Build:
+    name: Build
     runs-on: ubuntu-latest
-
-    environment:
-      name: Production
-      url: https://btkostner.io
 
     steps:
       - name: Checkout
@@ -48,10 +45,32 @@ jobs:
         env:
           FONTAWESOME_NPM_AUTH_TOKEN: ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+  Lint:
+    name: Lint
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install (Node)
+        uses: actions/setup-node@v2
         with:
-          cname: btkostner.io
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          keep_files: true
-          publish_dir: ./dist
+          cache: npm
+          node-version: '16.13.0'
+
+      - name: Cache
+        id: cache
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: 16.13.0-${{ hashFiles('package-lock.json') }}
+
+      - name: Install (Npm)
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npm install --prefer-offline --no-audit --no-fund
+        env:
+          FONTAWESOME_NPM_AUTH_TOKEN: ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
+
+      - name: Lint
+        run: npm run lint
