--- a/package.json
+++ b/package.json
@@ -1,42 +1,23 @@
 {
   "name": "btkostner.io",
   "description": "Blake Kostner's slice of the web. Senior web engineer at System76. Core team at elementary. Open source proselytizer, and drive by contributor.",
-  "version": "4.0.0",
+  "version": "5.0.0",
   "private": true,
   "scripts": {
     "start": "nuxt dev",
-    "build": "nuxt generate",
-    "lint": "eslint --ext .js,.vue"
-  },
-  "dependencies": {
-    "@nuxt/content": "^1.15.1",
-    "@nuxtjs/feed": "^2.0.0",
-    "@nuxtjs/sitemap": "^2.4.0",
-    "core-js": "^3.19.2",
-    "nuxt": "^2.15.8",
-    "vue": "^2.6.14"
+    "build": "nuxt build",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "format": "prettier -w ."
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/pro-regular-svg-icons": "^5.15.4",
-    "@fortawesome/pro-solid-svg-icons": "^5.15.4",
-    "@fortawesome/vue-fontawesome": "^2.0.6",
-    "@nuxt/image": "^0.6.0",
-    "@nuxtjs/color-mode": "^2.1.1",
-    "@nuxtjs/eslint-config": "^8.0.0",
-    "@nuxtjs/pwa": "^3.3.5",
-    "@nuxtjs/robots": "^2.5.0",
-    "@nuxtjs/tailwindcss": "^4.2.1",
-    "@tailwindcss/aspect-ratio": "^0.3.0",
-    "@tailwindcss/typography": "^0.4.1",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "nuxt-dynamic-images": "0.0.1",
-    "shiki": "^0.9.13"
+    "@headlessui/vue": "^1.6.4",
+    "@heroicons/vue": "^1.0.6",
+    "@nuxt/content": "^2.0.1",
+    "@nuxtjs/color-mode": "^3.1.3",
+    "@nuxtjs/tailwindcss": "^5.1.2",
+    "nuxt": "3.0.0-rc.3",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.11"
   }
 }
