--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
   "scripts": {
     "start": "nuxt dev",
     "build": "nuxt build",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
+    "lint": "eslint --ext .js,.ts,.vue .",
     "format": "prettier -w ."
   },
   "devDependencies": {
-    "@headlessui/vue": "^1.6.4",
+    "@headlessui/vue": "^0.0.0-insiders.4e13a0e",
     "@heroicons/vue": "^1.0.6",
     "@nuxt/content": "^2.0.1",
     "@nuxtjs/color-mode": "^3.1.3",
+    "@nuxtjs/eslint-config-typescript": "^10.0.0",
     "@nuxtjs/tailwindcss": "^5.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-nuxt": "^3.2.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "nuxt": "3.0.0-rc.3",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.11"
