--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,7 +2,8 @@
 version: 2
 
 updates:
-  - package-ecosystem: npm
+  - directory: /
+    package-ecosystem: npm
     open-pull-requests-limit: 10
     schedule:
       interval: monthly
