--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "btkostner.io",
-  "description": "Blake Kostner's slice of the web. Senior web engineer at System76. Core team at elementary. Open source proselytizer, and drive by contributor.",
+  "description": "Blake Kostner personal website",
   "version": "5.0.0",
   "private": true,
   "scripts": {
@@ -10,18 +10,23 @@
     "format": "prettier -w ."
   },
   "devDependencies": {
-    "@headlessui/vue": "^0.0.0-insiders.4e13a0e",
-    "@heroicons/vue": "^1.0.6",
-    "@nuxt/content": "^2.0.1",
-    "@nuxtjs/color-mode": "^3.1.3",
-    "@nuxtjs/eslint-config-typescript": "^10.0.0",
-    "@nuxtjs/tailwindcss": "^5.1.2",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@headlessui/vue": "=0.0.0-insiders.920365c",
+    "@heroicons/vue": "^2.0.10",
+    "@nuxt/content": "^2.1.0",
+    "@nuxtjs/color-mode": "^3.1.5",
+    "@nuxtjs/eslint-config-typescript": "^11.0.0",
+    "@nuxtjs/tailwindcss": "^5.3.3",
+    "@types/chroma-js": "^2.1.4",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-nuxt": "^3.2.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "nuxt": "3.0.0-rc.3",
-    "prettier": "^2.6.2",
-    "prettier-plugin-tailwindcss": "^0.1.11"
+    "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nuxt": "^3.0.0-rc.10",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "tailwindcss-touch": "^1.0.1"
+  },
+  "dependencies": {
+    "chroma-js": "^2.4.2"
   }
 }
