more work on the footer

--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "devDependencies": {
     "@headlessui/vue": "=0.0.0-insiders.920365c",
-    "@heroicons/vue": "^2.0.10",
-    "@nuxt/content": "^2.1.0",
-    "@nuxtjs/color-mode": "^3.1.5",
-    "@nuxtjs/eslint-config-typescript": "^11.0.0",
-    "@nuxtjs/tailwindcss": "^5.3.3",
+    "@heroicons/vue": "^2.0.13",
+    "@nuxt/content": "^2.2.2",
+    "@nuxtjs/color-mode": "^3.1.8",
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@nuxtjs/tailwindcss": "^6.1.3",
     "@types/chroma-js": "^2.1.4",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "nuxt": "^3.0.0-rc.10",
+    "nuxt": "^3.0.0",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss-touch": "^1.0.1"
