--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/color-mode": "^3.1.8",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/tailwindcss": "^6.1.3",
+    "@tailwindcss/typography": "^0.5.8",
     "@types/chroma-js": "^2.1.4",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "eslint-config-prettier": "^8.5.0",
