--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,13 +1,13 @@
 ---
-
 version: 2
 
 updates:
-  - package-ecosystem: npm
+  - directory: /
+    package-ecosystem: npm
     open-pull-requests-limit: 10
     schedule:
       interval: monthly
-      time: '00:00'
+      time: "00:00"
     reviewers:
       - btkostner
     assignees:
