--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,4 @@
 ---
-
 name: CI
 
 on:
@@ -11,6 +10,10 @@ on:
   push:
     branches:
       - main
+
+concurrency:
+  group: CI
+  cancel-in-progress: true
 
 jobs:
   Build:
@@ -25,7 +28,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           cache: npm
-          node-version: '16.13.0'
+          node-version: "16.13.0"
 
       - name: Cache
         id: cache
@@ -37,13 +40,39 @@ jobs:
       - name: Install (Npm)
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci --prefer-offline --no-audit --no-fund
-        env:
-          FONTAWESOME_NPM_AUTH_TOKEN: ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
 
       - name: Build
         run: npm run build
         env:
-          FONTAWESOME_NPM_AUTH_TOKEN: ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
+          NITRO_PRESET: cloudflare
+
+  Format:
+    name: Format
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install (Node)
+        uses: actions/setup-node@v2
+        with:
+          cache: npm
+          node-version: "16.13.0"
+
+      - name: Cache
+        id: cache
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: 16.13.0-${{ hashFiles('package-lock.json') }}
+
+      - name: Install (Npm)
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npm ci --prefer-offline --no-audit --no-fund
+
+      - name: Format
+        run: npm run format -- --check
 
   Lint:
     name: Lint
@@ -57,7 +86,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           cache: npm
-          node-version: '16.13.0'
+          node-version: "16.13.0"
 
       - name: Cache
         id: cache
@@ -69,8 +98,6 @@ jobs:
       - name: Install (Npm)
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci --prefer-offline --no-audit --no-fund
-        env:
-          FONTAWESOME_NPM_AUTH_TOKEN: ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
 
       - name: Lint
         run: npm run lint
