--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ on:
       - main
 
 concurrency:
-  group: CI
+  group: CI ${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
 jobs:
@@ -98,6 +98,9 @@ jobs:
       - name: Install (Npm)
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci --prefer-offline --no-audit --no-fund
+
+      - name: Prepare
+        run: npx nuxi prepare
 
       - name: Lint
         run: npm run lint
