--- a/package.json
+++ b/package.json
@@ -10,25 +10,21 @@
     "format": "prettier -w ."
   },
   "devDependencies": {
-    "@headlessui/vue": "=1.7.4",
-    "@heroicons/vue": "^2.0.13",
-    "@nuxt/content": "^2.2.2",
-    "@nuxtjs/color-mode": "^3.2.0",
-    "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@nuxtjs/tailwindcss": "^6.1.3",
-    "@tailwindcss/typography": "^0.5.8",
-    "@types/chroma-js": "^2.1.4",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@headlessui/vue": "^1.7.18",
+    "@heroicons/vue": "^2.1.1",
+    "@nuxt/content": "^2.11.0",
+    "@nuxtjs/color-mode": "^3.3.2",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@nuxtjs/tailwindcss": "^6.11.2",
+    "@tailwindcss/typography": "^0.5.10",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-nuxt": "^4.0.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "nuxt": "^3.0.0",
-    "prettier": "^2.8.0",
-    "prettier-plugin-tailwindcss": "^0.2.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "nuxt": "^3.10.0",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "sitemap": "^7.1.1",
     "tailwindcss-touch": "^1.0.1"
-  },
-  "dependencies": {
-    "chroma-js": "^2.4.2"
   }
 }
