--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/tailwindcss": "^6.11.2",
+    "@radix-ui/colors": "^3.0.0",
     "@tailwindcss/typography": "^0.5.10",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "eslint-config-prettier": "^9.1.0",
