--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^5.1.3",
     "nuxt": "^3.10.0",
+    "nuxt-og-image": "^3.0.0-rc.37",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "sitemap": "^7.1.1",
