--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,23 +21,24 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Install (Node)
-        uses: actions/setup-node@v2
+      - id: node
+        name: Install (Node)
+        uses: actions/setup-node@v4
         with:
           cache: npm
-          node-version: "16.13.0"
+          node-version-file: .tool-versions
 
-      - name: Cache
-        id: cache
+      - id: cache
+        name: Cache
         uses: actions/cache@v2
         with:
+          key: ${{ steps.node.outputs.node-version }}-${{ hashFiles('package-lock.json') }}
           path: node_modules
-          key: 16.13.0-${{ hashFiles('package-lock.json') }}
 
-      - name: Install (Npm)
-        if: steps.cache.outputs.cache-hit != 'true'
+      - if: steps.cache.outputs.cache-hit != 'true'
+        name: Install (Npm)
         run: npm ci --prefer-offline --no-audit --no-fund
 
       - name: Build
@@ -46,7 +47,7 @@ jobs:
           NITRO_PRESET: cloudflare
 
       - name: Publish
-        uses: cloudflare/wrangler-action@2.0.0
+        uses: cloudflare/wrangler-action@3
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
