--- a/package.json
+++ b/package.json
@@ -24,15 +24,17 @@
     "@nuxt/content": "^3.6.3",
     "@nuxt/eslint": "^1.7.1",
     "@nuxtjs/color-mode": "^3.3.2",
-    "@nuxtjs/tailwindcss": "^6.11.2",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "@radix-ui/colors": "^3.0.0",
     "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/vite": "^4.1.11",
     "eslint": "^9.32.0",
     "nuxt": "^4.0.2",
     "nuxt-og-image": "^5.1.9",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "sitemap": "^8.0.0",
+    "tailwindcss": "^4.1.11",
     "tailwindcss-touch": "^1.0.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
