--- a/package.json
+++ b/package.json
@@ -1,35 +1,45 @@
 {
   "name": "btkostner.io",
   "description": "Blake Kostner personal website",
-  "version": "5.0.0",
+  "version": "6.0.0",
   "private": true,
+  "type": "module",
   "engines": {
-    "node": "^20.11.0"
+    "node": "^22.0.0"
   },
   "scripts": {
     "start": "nuxt dev",
     "build": "nuxt build",
-    "lint": "eslint --ext .js,.ts,.vue .",
-    "format": "prettier -w ."
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier -w .",
+    "postinstall": "nuxt prepare"
+  },
+  "dependencies": {
+    "better-sqlite3": "^12.2.0"
   },
   "devDependencies": {
     "@headlessui/vue": "^1.7.18",
     "@heroicons/vue": "^2.1.1",
-    "@nuxt/content": "^2.11.0",
+    "@nuxt/content": "^3.6.3",
+    "@nuxt/eslint": "^1.7.1",
     "@nuxtjs/color-mode": "^3.3.2",
-    "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/tailwindcss": "^6.11.2",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "@radix-ui/colors": "^3.0.0",
     "@tailwindcss/typography": "^0.5.10",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-nuxt": "^4.0.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "nuxt": "^3.10.0",
-    "nuxt-og-image": "^3.0.0-rc.37",
+    "@tailwindcss/vite": "^4.1.11",
+    "eslint": "^9.32.0",
+    "nuxt": "^4.0.2",
+    "nuxt-og-image": "^5.1.9",
     "prettier": "^3.2.4",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "sitemap": "^7.1.1",
-    "tailwindcss-touch": "^1.0.1"
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "sitemap": "^8.0.0",
+    "tailwindcss": "^4.1.11",
+    "tailwindcss-touch": "^1.0.1",
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1"
+  },
+  "overrides": {
+    "vite": "npm:rolldown-vite@latest"
   }
 }
